[gd_scene load_steps=2 format=3 uid="uid://ckb0ee8kavbjo"]

[ext_resource type="Script" path="res://src/ui/item_details_screen.gd" id="1_4b66y"]

[node name="ItemDetailsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4b66y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Item Info"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name:"

[node name="DescLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DescLabel" type="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "???"
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BackButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Back"

[connection signal="button_up" from="VBoxContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
